discussion/kv_engine/129840/129840_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39375: Add Setting for storage thread

Add a new memcached setting "num_storage_threads" which is a global
configuration value that we can pass through to the engine to set the
appropriate number of backend storage threads. This configuration
parameter will have a default value that can be supplied by passing a
configuration parameter of 0.

In a following patch we will add a "magma_flusher_thread_percentage"
configuration parameter than is required to calculate the appropriate
number of magma flusher and compactor threads.

Change-Id: Iae43f14ef914c8b8cb02d996dcdede650614f2a9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2020-06-08 15:03:19.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-08 15:14:07.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24462/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2287:20:
error: out-of-line definition of "setBackendThreads" does not match any declaration in "MagmaKVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24462/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28435/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2287): error C2039: "setBackendThreads": is not a member of "MagmaKVStore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28435/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2637/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2287:20: error: out-of-line definition of "setBackendThreads" does not match any declaration in "MagmaKVStore" [clang-diagnostic-error]
void MagmaKVStore::setBackendThreads(Configuration& config) {
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2637/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2287:20:
error: out-of-line definition of "setBackendThreads" does not match any declaration in "MagmaKVStore" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2637/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4130/ : FAILURE

Compile error at [2020-06-08T15:12:13.192Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2287:59:
error: no ?void MagmaKVStore::setBackendThreads(Configuration&)? member function declared in class ?MagmaKVStore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4130/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4045/ : FAILURE

Compile error at [2020-06-08T15:08:20.708Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2287:59:
error: no ?void MagmaKVStore::setBackendThreads(Configuration&)? member function declared in class ?MagmaKVStore?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4045/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11879/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3110/ : FAILURE

Compile error at [2020-06-08T15:06:55.876Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2287:20:
error: out-of-line definition of "setBackendThreads" does not match any declaration in "MagmaKVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3110/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1141/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4003/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
